# midbuddy

./: README.md  hello.py  pyproject.toml
src/midbuddy/: __init__.py  cli.py  hello.py
