[project]
name = "midbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "petelouise", email = "programmetress@petelouise.beauty" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pyexiftool>=0.5.6",
    "pyexiv2>=2.15.3",
    "send2trash>=1.8.3",
]

[project.scripts]
midbuddy = "midbuddy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
